# w5500_freertos

./: .gitignore  .gitmodules  CMakeLists.txt
dhcp_fix/: dhcp.c  dhcp.h
libraries/: CMakeLists.txt
port/ioLibrary_Driver/src/: w5x00_spi.c
src/: main.c  main.h  server.c  server.h  types.h  ventcontrol.c  ventcontrol.h
